adding new file and fixing errors

--- a/prueba.html
+++ b/prueba.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <h1>hola</h1>
+  <h1>hola</h1>
+  <h1>hola</h1>
+  <h1>hola</h1>
   <p>esto es una prueba</p>
+  <p>segunda prueba</p>
 </body>
 </html>
